[package]
name = "cc-wss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "0.17.2"
tokio = {version = "1.20.1",features = ["full"]}
futures-util = "0.3.21"
serde = {version = "1.0.143", features = ["derive"]}
serde_json = "1.0.83"
async-recursion = "1.0.0"
futures = {version = "0.3.21", features = ["thread-pool"]}
notify = "5.0.0-pre.15"
lazy_static = "1.4.0"
log = "0.4.17"